# coding-challenges

./: .gitignore  463.cpp  README  Template.java  build_nanobind.sh  build_nb.sh  delftdistance.cpp  nob.c  nob.cpp  nob.h  nob.py  nobnb.cpp  nobuild.h  template.cc  test_nob_nanobind_extension.py
?/: longest_binary_gap.cpp  threetree.cpp
adventofcode/2023/day/21/: CMakeLists.txt  fit.py  lsan.supp  run  step_counter.cpp
atcoder/: 1Dcountry.cpp  janken3.cpp  sierpinski_carpet.cpp  souvenirs.cpp
codeforces/: monitor.cc  usbs.cc
codejam/: ascii_art.cpp  cryptopangrams.py  store_credit.cc
codility/: longestPassword_trainingVYEGRT-54F.cpp
ctci/: island.py  pond.py
custom/: alif.cpp  alif.nim  alif.py  balanced.cpp  binary.cc  bucketsort.cpp  bā.cpp  circhain.py  controller.cpp  factorial.cc  fib.cc  floyd.cpp  isbalanced.cc  kaitenzushi.cpp  lambda_calculus.py  mergesort.cpp  power.cpp  ppr.cpp  quicksort.cpp  quicksort_stable.cpp  randgen_mergesort.cpp  roman.cc  running_time_sorts.cpp  sinc.cpp  transposeinplace.cc
euler/: evenFibonacci.cc  multiples3and5.cc
hackercup12/: billboards.cc  recover.cc  soup.cc  squished.cc
hackercup13/: squaredetector.cc
hackerrank/: EasyMath.java  easymath.cpp  flippingBits.py  flipping_matrix_quadrant_maxsum.cpp  hello.ua  prim.cpp  simplified_chess_engine.cc
icfp/: lambdaman.cpp  lambdaman.in  lambdaman_input.hpp
include/: nobcmp.h
kattis/: bugs.cpp  climbingstairs.cpp  cuttingthenecklace.cpp  dartscoring.cpp  divisible.c  divisible.cc  divisible.py  exchangerates.cpp  hauntedgraveyard.cc  hauntergraveyard.cc  (+7 more)
(+185 files in other folders)
